# HKS

./: .gitmodules  Cargo.toml  LICENSE  README.md
chromosome_benchmark/: README.md
chromosome_benchmark/checksums/: correct.txt
chromosome_benchmark/feature_tree/: chromosome_fof.txt  chromosome_tree.txt
chromosome_benchmark/preprint_results/: hks_hierarchy_dump.txt  index_sizes.txt  kraken_names.dmp  node_stats.tsv  query_names.txt
chromosome_benchmark/scripts/: build_latex_table.py  compute_heatmap_data.rs  draw_combined_heatmap.py  draw_dks_heatmap.bash  draw_heatmap.py  draw_kraken_heatmap.bash  draw_split_heatmaps.py  heatmap_lib.py  kraken_to_bed.rs  plot_node_stats.py  plot_parallel_speedup.py  print_dks_build_benchmark_commands.py  print_dks_query_benchmark_commands.py  print_dks_to_heatmaps_commands.py  print_hks_build_benchmark_commands.py  print_hks_query_benchmark_commands.py  print_hks_to_heatmaps_commands.py  print_kraken_build_benchmark_commands.py  print_kraken_minimizer_build_commands.py  print_kraken_minimizer_query_commands.py  print_kraken_query_benchmark_commands.py  print_kraken_to_heatmaps_commands.py  print_parallel_speedup_commands.py  print_setup_kraken_dir_commands.py  setup_kraken_dir.bash  setup_kraken_dir.py
example/: A.fasta  B.fasta  C.fasta  D.fna  file_of_files.txt  hierarchy.txt  query.fasta
src/: color_storage.rs  io.rs  lca_support.rs  lca_tree.rs  main.rs  parallel_queries.rs  single_colored_kmers.rs  single_threaded_queries.rs  smooth.rs  traits.rs  util.rs  wavelet_tree.rs
tests/: integration.rs
(+10 files in other folders)
